# ros-lidar-examples

./: CMakeLists.txt  README.md  package.xml
nodes/: fake_scan_publisher.py  scan_publisher.py  subscriber.py
rviz/: default.rviz
