<?xml version="1.0"?>
<package format="2">
  <name>ros_lidar_examples</name>
  <version>1.0.0</version>
  <description>Project template for LiDAR examples</description>
  <maintainer email="safin.ramil@it.kfu.ru">Ramil Safin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <export/>

</package>
